--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -1,8 +1,14 @@
+/* .wrapper {
+	display: flex;
+	flex-direction: row;
+} */
+
 .container {
 	margin: auto;
 	/* max-width: 75rem; */
 	display: flex;
 	flex-direction: row;
+
 	width: 100%;
 	max-width: 1010px;
 	margin: 0 auto;
@@ -12,21 +18,5 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-
 	margin-top: 15px;
-}
-
-section {
-	flex: 1;
-}
-
-aside {
-	margin: 0 0 0 20px;
-	flex: 0 1 300px;
-}
-
-@media screen and (min-width: 640px) {
-	.container {
-		display: flex;
-	}
 }
