--- a/src/components/UI/Card/Card.css
+++ b/src/components/UI/Card/Card.css
@@ -1,7 +1,7 @@
 .card {
 	background-color: #fff;
 	border: 1px solid rgba(0, 0, 0, 0.0975);
-	padding: 20px 104px 20px 20px;
+	padding: 20px;
 }
 
 .card a:hover {
